Finally, finally fixed firefox transition being jumpy bug. Apparently slick thinks it should hide elements which are slightly out of screen...

--- a/public/styles/home.styl
+++ b/public/styles/home.styl
@@ -9,13 +9,11 @@ body
   text-align center
 
 .column
-  display inline-block
   position relative
   overflow hidden
   white-space normal
 
   transition width 300ms cubic-bezier(0.075, 0.82, 0.165, 1)
-  outline none
 
 .background
   width inherit
